--- a/src/assets/i18n/Portuguese.json
+++ b/src/assets/i18n/Portuguese.json
@@ -26,6 +26,11 @@
       "show_passed_rule": "Passou",
       "show_failed_rule": "Falhou",
       "show_warning_rule": "Aviso",
+      "type": "Tipo",
+      "show_act": "Regras ACT",
+      "show_html": "Técnicas HTML",
+      "show_css": "Técnicas CSS",
+      "show_bp": "Melhores Práticas",
       "principle": "Princípio",
       "level": "Nível",
       "show_not_applicable_result": "Não aplicável",
@@ -44,10 +49,15 @@
         "level": "Nível",
         "principle": "Princípio"
       },
-      "target_elem": "Elemento alvo: ",
+      "target_parent": "Elementos-pai alvo: ",
+      "target_parent_sibling": "Irmãos de elementos-pai alvo: ",
+      "target_css": "CSS alvo: ",
+      "target_children": "Elementos-filho alvo: ",
+      "target_elem": "Elementos alvo: ",
       "target_attr": "Atributos alvo: ",
       "results": "Resultados",
-      "result_code": "Ver representação visual"
+      "result_code": "Ver representação visual",
+      "no_results": "Não existem elementos assim para testar"
     }
   },
   "RESULT_CODE_DIALOG": {
@@ -62,7 +72,8 @@
     "English": "English"
   },
   "HOMEPAGE": {
-    "title": "Valide uma página web:"
+    "title": "Valide uma página web:",
+    "about": "Acerca do QualWeb"
   },
   "INPUT_URL": {
     "placeholder": "Insira o url aqui",
@@ -139,11 +150,84 @@
     "robust": "Robusto"
   },
   "SUCCESS_CRITERIA":  {
+    "1.1.1": "Conteúdo Não Textual",
+    "1.2.1": "Conteúdo só de áudio e só de vídeo (pré-gravado)",
+    "1.2.2": "Legendas (pré-gravadas)",
+    "1.2.3": "Audiodescrição ou Alternativa em Multimédia (pré-gravada)",
+    "1.2.4": "Legendas (em direto)",
+    "1.2.5": "Audiodescrição (pré-gravada)",
+    "1.2.6": "Língua Gestual (pré-gravada)",
+    "1.2.7": "Audiodescrição Alargada (pré-gravada)",
+    "1.2.8": "Alternativa em Multimédia (pré-gravada)",
+    "1.2.9": "Só áudio (em direto)",
+    "1.3.1": "Informações e Relações",
+    "1.3.2": "Sequência com Significado",
+    "1.3.3": "Características Sensoriais",
+    "1.3.4": "",
+    "1.3.5": "",
+    "1.3.6": "",
+    "1.4.1": "Utilização da Cor",
+    "1.4.2": "Controlo de Áudio",
+    "1.4.3": "Contraste (Mínimo)",
+    "1.4.4": "Redimensionar texto",
+    "1.4.5": "Imagens de Texto",
+    "1.4.6": "Contraste (Melhorado)",
+    "1.4.7": "Som Baixo ou Ausência de Som de Fundo",
+    "1.4.8": "Apresentação Visual",
+    "1.4.9": "Imagens de Texto (sem exceção)",
+    "1.4.10": "",
+    "1.4.11": "",
+    "1.4.12": "",
+    "1.4.13": "",
     "2.1.1": "Teclado",
+    "2.1.2": "Sem Bloqueio do Teclado",
+    "2.1.3": "Teclado (Sem Exceção)",
+    "2.1.4": "",
+    "2.2.1": "Tempo Ajustável",
+    "2.2.2": "Colocar em Pausa, Parar, Ocultar",
+    "2.2.3": "Sem Temporização",
     "2.2.4": "Interrupções",
+    "2.2.5": "Nova autenticação",
+    "2.2.6": "",
+    "2.3.1": "Três Flashes ou Abaixo do Limite",
+    "2.3.2": "Três Flashes",
+    "2.3.3": "",
+    "2.4.1": "Ignorar Blocos",
     "2.4.2": "Página com Título",
+    "2.4.3": "Ordem do Foco",
+    "2.4.4": "Finalidade da Hiperligação (Em Contexto)",
+    "2.4.5": "Várias Formas",
+    "2.4.6": "Cabeçalhos e Etiquetas",
+    "2.4.7": "Foco Visível",
+    "2.4.8": "Localização",
+    "2.4.9": "Finalidade da Hiperligação (Apenas a Hiperligação)",
+    "2.4.10": "Cabeçalhos da Secção",
+    "2.5.1": "",
+    "2.5.2": "",
+    "2.5.3": "",
+    "2.5.4": "",
+    "2.5.5": "",
+    "2.5.6": "",
     "3.1.1": "Idioma da Página",
-    "3.2.5": "Alteração a Pedido"
+    "3.1.2": "Idioma de Partes",
+    "3.1.3": "Palavras Invulgares",
+    "3.1.4": "Abreviaturas",
+    "3.1.5": "Nível de Leitura",
+    "3.1.6": "Pronunciação",
+    "3.2.1": "Ao receber o Foco",
+    "3.2.2": "Ao entrar num campo de edição (input)",
+    "3.2.3": "Consistência de Navegação",
+    "3.2.4": "Consistência de Identificação",
+    "3.2.5": "Alteração a Pedido",
+    "3.3.1": "Identificação de Erros",
+    "3.3.2": "Etiquetas ou Instruções",
+    "3.3.3": "Sugestão para eliminar o Erro",
+    "3.3.4": "Prevenção de Erros (Legais, Financeiros, Dados)",
+    "3.3.5": "Ajuda",
+    "3.3.6": "Prevenção de Erros (de qualquer tipo)",
+    "4.1.1": "Análise sintática (parsing)",
+    "4.1.2": "Nome, Função, Valor",
+    "4.1.3": ""
   },
   "ABOUT_PAGE": {
     "1": "O QualWeb é um serviço de avaliação automática de acessibilidade web, que integra resultados de diferentes projetos de investigação.",
