--- a/src/assets/i18n/English.json
+++ b/src/assets/i18n/English.json
@@ -26,12 +26,18 @@
       "show_passed_rule": "Passed",
       "show_failed_rule": "Failed",
       "show_warning_rule": "Warning",
+      "type": "Type",
+      "show_act": "ACT Rules",
+      "show_html": "HTML Techniques",
+      "show_css": "CSS Techniques",
+      "show_bp": "Best Practices",
       "principle": "Principle",
       "level": "Level",
       "show_not_applicable_result": "Not applicable",
       "show_passed_result": "Passed",
       "show_failed_result": "Failed",
       "show_warning_result": "Warning",
+      "toggle": "Toggle filters",
       "expand_all": "Expand all rules and techniques",
       "close_all": "Close all rules and techniques",
       "results":  "result(s)"
@@ -44,10 +50,15 @@
         "level": "Level",
         "principle": "Principle"
       },
+      "target_parent": "Target parent: ",
+      "target_parent_sibling": "Target parent sibling: ",
+      "target_css": "Target CSS: ",
+      "target_children": "Target children: ",
       "target_elem": "Target element: ",
       "target_attr": "Target attributes: ",
       "results": "Results",
-      "result_code": "See visual representation"
+      "result_code": "See visual representation",
+      "no_results": "There are no such elements to test"
     }
   },
   "RESULT_CODE_DIALOG": {
@@ -62,7 +73,8 @@
     "English": "English"
   },
   "HOMEPAGE": {
-    "title": "Validate a webpage:"
+    "title": "Validate a webpage:",
+    "about": "About QualWeb"
   },
   "INPUT_URL": {
     "placeholder": "Insert url here",
@@ -73,6 +85,43 @@
     "go_to_top": "Go to top"
   },
   "RULES": {
+    "QW-HTML-T1": {
+      "name": "Providing text alternatives for the area elements of image maps",
+      "description": "This technique checks the text alternative of area elements of images maps",
+      "RC1": "The element doesn't contain an alt attribute",
+      "RC2": "The element's alt attribute value is empty",
+      "RC3": "Please verify the alt attribute value describes correctly the correspondent area of the image"
+    },
+    "QW-HTML-T2": {
+      "name": "Using caption elements to associate data table captions with data tables",
+      "description": "This technique checks the caption element is correctly use on tables",
+      "RC1": "The caption does not exist in the table element",
+      "RC2": "The caption is empty",
+      "RC3": "Please verify that the caption element identifies the table correctly."
+    },
+    "QW-HTML-T3": {
+      "name": "Providing a description for groups of form controls using fieldset and legend elements",
+      "description": "This technique checks the correct use of the description element for form controls",
+      "RC1": "The fieldset is not in a form and is not referencing a form",
+      "RC2": "The legend does not exist in the fieldset element",
+      "RC3": "The legend is empty",
+      "RC4": "Please verify that the legend description is valid"
+    },
+    "QW-HTML-T4": {
+      "name": "Using the summary attribute of the table element to give an overview of data tables",
+      "description": "This technique checks the correct use of the summary attribute for table elements",
+      "RC1": "The summary does not exist in the table element",
+      "RC2": "The summary is empty",
+      "RC3": "The caption is a duplicate of the summary",
+      "RC4": "Please verify that the summary is a valid description of the table"
+    },
+    "QW-HTML-T5": {
+      "name": "Using alt attributes on images used as submit buttons",
+      "description": "This technique checks all input elements that are buttons use alt text",
+      "RC1": "The alt does not exist in the input element",
+      "RC2": "The alt is empty",
+      "RC3": "Please verify that the alt is a valid description of the input image"
+    },
     "QW-ACT-R1": {
       "name": "HTML Page has a title",
       "description": "This rule checks that the HTML page has a title.",
@@ -139,11 +188,84 @@
     "robust": "Robust"
   },
   "SUCCESS_CRITERIA":  {
+    "1.1.1": "Non-text Content",
+    "1.2.1": "Audio-only and Video-only (Prerecorded)",
+    "1.2.2": "Captions (Prerecorded)",
+    "1.2.3": "Audio Description or Media Alternative (Prerecorded)",
+    "1.2.4": "Captions (Live)",
+    "1.2.5": "Audio Description (Prerecorded)",
+    "1.2.6": "Sign Language (Prerecorded)",
+    "1.2.7": "Extended Audio Description (Prerecorded)",
+    "1.2.8": "Media Alternative (Prerecorded)",
+    "1.2.9": "Audio-only (Live)",
+    "1.3.1": "Info and Relationships",
+    "1.3.2": "Meaningful Sequence",
+    "1.3.3": "Sensory Characteristics",
+    "1.3.4": "Orientation",
+    "1.3.5": "Identify Input Purpose",
+    "1.3.6": "Identify Purpose",
+    "1.4.1": "Use of Color",
+    "1.4.2": "Audio Control",
+    "1.4.3": "Contrast (Minimum)",
+    "1.4.4": "Resize text",
+    "1.4.5": "Images of Text",
+    "1.4.6": "Contrast (Enhanced)",
+    "1.4.7": "Low or No Background Audio",
+    "1.4.8": "Visual Presentation",
+    "1.4.9": "Images of Text (No Exception)",
+    "1.4.10": "Reflow",
+    "1.4.11": "Non-text Contrast",
+    "1.4.12": "Text Spacing",
+    "1.4.13": "Content on Hover or Focus",
     "2.1.1": "Keyboard",
+    "2.1.2": "No Keyboard Trap",
+    "2.1.3": "Keyboard (No Exception)",
+    "2.1.4": "Character Key Shortcuts",
+    "2.2.1": "Timing Adjustable",
+    "2.2.2": "Pause, Stop, Hide",
+    "2.2.3": "No Timing",
     "2.2.4": "Interruptions",
+    "2.2.5": "Re-authenticating",
+    "2.2.6": "Timeouts",
+    "2.3.1": "Three Flashes or Below Threshold",
+    "2.3.2": "Three Flashes",
+    "2.3.3": "Animation from Interactions",
+    "2.4.1": "Bypass Blocks",
     "2.4.2": "Page Titled",
+    "2.4.3": "Focus Order",
+    "2.4.4": "Link Purpose (In Context)",
+    "2.4.5": "Multiple Ways",
+    "2.4.6": "Headings and Labels",
+    "2.4.7": "Focus Visible",
+    "2.4.8": "Location",
+    "2.4.9": "Link Purpose (Link Only)",
+    "2.4.10": "Section Headings",
+    "2.5.1": "Pointer Gestures",
+    "2.5.2": "Pointer Cancellation",
+    "2.5.3": "Label in Name",
+    "2.5.4": "Motion Actuation",
+    "2.5.5": "Target Size",
+    "2.5.6": "Concurrent Input Mechanisms",
     "3.1.1": "Language of Page",
-    "3.2.5": "Change on Request"
+    "3.1.2": "Language of Parts",
+    "3.1.3": "Unusual Words",
+    "3.1.4": "Abbreviations",
+    "3.1.5": "Reading Level",
+    "3.1.6": "Pronunciation",
+    "3.2.1": "On Focus",
+    "3.2.2": "On Input",
+    "3.2.3": "Consistent Navigation",
+    "3.2.4": "Consistent Identification",
+    "3.2.5": "Change on Request",
+    "3.3.1": "Error Identification",
+    "3.3.2": "Labels or Instructions",
+    "3.3.3": "Error Suggestion",
+    "3.3.4": "Error Prevention (Legal, Financial, Data)",
+    "3.3.5": "Help",
+    "3.3.6": "Error Prevention (All)",
+    "4.1.1": "Parsing",
+    "4.1.2": "Name, Role, Value",
+    "4.1.3": "Status Messages"
   },
   "ABOUT_PAGE": {
     "1": "QualWeb is an automated web accessibility evaluation service which incorporates contributions from different research projects and efforts.",
