--- a/src/assets/i18n/English.json
+++ b/src/assets/i18n/English.json
@@ -65,8 +65,8 @@
     "loading": {
       "starting": "Starting evaluation...",
       "act-rules": "Evaluating ACT rules...",
-      "html-techniques": "Evaluation WCAG 2.1 HTML techniques...",
-      "css-techniques": "Evaluation WCAG 2.1 CSS techniques...",
+      "html-techniques": "Evaluating WCAG 2.1 HTML techniques...",
+      "css-techniques": "Evaluating WCAG 2.1 CSS techniques...",
       "best-practices": "Checking for best practices...",
       "preparing-data": "Preparing data..."
     }
