beautify results_box, update title to results

--- a/src/assets/i18n/English.json
+++ b/src/assets/i18n/English.json
@@ -44,7 +44,7 @@
       "results":  "results"
     },
     "report": {
-      "title": "Accessibility report",
+      "title": "Evaluation Report",
       "description": "Description",
       "type": "Type",
       "criteria": {
