--- a/src/assets/i18n/Portuguese.json
+++ b/src/assets/i18n/Portuguese.json
@@ -42,7 +42,7 @@
       "results":  "resultado(s)"
     },
     "report": {
-      "title": "Relatório de acessibilidade",
+      "title": "Relatório da avaliação",
       "description": "Descrição",
       "criteria": {
         "title": "Critérios de sucesso",
