update to about page

--- a/src/assets/i18n/English.json
+++ b/src/assets/i18n/English.json
@@ -279,15 +279,32 @@
     "4.1.3": "Status Messages"
   },
   "ABOUT_PAGE": {
-    "1": "QualWeb is an automated web accessibility evaluation service which incorporates contributions from different research projects and efforts.",
-    "2": "QualWeb is able to automatically check a webpage against a set of ",
-    "wcag": "WCAG 2.1 Techniques",
-    "and": " and ",
-    "act": "ACT Rules",
-    "3": "QualWeb will also make available, from time to time, experimental modules that come out of specific research projects, and which might improve different aspects of web accessibility evaluation (for example, a module to assess the quality of text alternatives). You will always have the option to use QualWeb without these modules.",
-    "4": "QualWeb is open-source and available at ",
-    "5": "You can use QualWeb online at this website, or as a ",
-    "cli": "command line tool",
-    "projects": "The following projects have contributed to QualWeb's development:"
+    "title_about": "About",
+    "about_1": "QualWeb is an automated web accessibility evaluation service which incorporates contributions from different research projects and efforts.",
+    "about_2": "QualWeb is able to automatically check a webpage against a set of ",
+    "about_wcag": "WCAG 2.1 Techniques",
+    "about_and": " and ",
+    "about_act": "ACT Rules",
+    "about_3": "QualWeb will also make available, from time to time, experimental modules that come out of specific research projects, and which might improve different aspects of web accessibility evaluation (for example, a module to assess the quality of text alternatives). You will always have the option to use QualWeb without these modules.",
+    "about_4": "QualWeb is open-source and available at ",
+    "about_5": "You can use QualWeb online at this website, or as a ",
+    "about_cli": "command line tool",
+    "about_6": ", integrate in your javascript projects or as a browser extension (soon).",
+    "about_projects": "The following projects have contributed to QualWeb's development:",
+    "title_accessibility": "Accessibility",
+    "access_1": "Accessibility is an important topic for us. For that reason we try to make QualWeb as accessible as possible. Conformance wise we aim to meet the ",
+    "access_wcag": "Web Content Accessibility Guidelines 2.1",
+    "access_2": " level AA standard. In this section we describe the accessibility features of this web site. If you have any problem while using QualWeb, on the website, or in any of the other formats, ",
+    "access_email": "email us",
+    "access_3": " and we will try to solve the issue as fast as we can.",
+    "access_features": "Accessibility features",
+    "features_1": "The website is keyboard accessible.",
+    "features_2": "Colors used for text have a contrast with the background of at least 4.5 to 1.",
+    "features_3": "All icons and images have a textual alternative.",
+    "features_4": "The design is responsive, adapting to mobile and desktop platforms.",
+    "features_5": "The website has been tested with different combinations of browsers and assistive technology.",
+    "title_contact": "Contact",
+    "contact_1": "Reach out to us with your suggestions using the email",
+    "contact_email": "qualweb@fc.ul.pt"
   }
 }
