replaced html and css techniques with wcag techniques

--- a/src/assets/i18n/English.json
+++ b/src/assets/i18n/English.json
@@ -32,6 +32,7 @@
       "show_warning_rule": "Warning",
       "type": "Type",
       "show_act": "ACT Rules",
+      "show_wcag": "WCAG Techniques",
       "show_html": "HTML Techniques",
       "show_css": "CSS Techniques",
       "show_bp": "Best Practices",
@@ -70,6 +71,7 @@
       "starting": "Starting evaluation...",
       "act-rules": "Evaluating ACT rules...",
       "html-techniques": "Evaluating WCAG 2.1 HTML techniques...",
+      "wcag-techniques": "Evaluating WCAG 2.1 techniques...",
       "css-techniques": "Evaluating WCAG 2.1 CSS techniques...",
       "best-practices": "Checking for best practices...",
       "preparing-data": "Preparing data...",
