update about page

--- a/src/assets/i18n/English.json
+++ b/src/assets/i18n/English.json
@@ -302,9 +302,11 @@
     "about_4": "QualWeb is open-source and available at ",
     "about_5": "You can use QualWeb online at this website, as a ",
     "about_cli": "command line tool",
-    "about_6": ", you can integrate in your javascript projects or use it as a",
+    "about_6": ", as a ",
     "about_extension": "browser extension",
-    "about_7": ".",
+    "about_7": ", or you can ",
+    "about_core": "integrate it in your javascript projects",
+    "about_8": ".",
     "about_projects": "The following projects have contributed to QualWeb's development:",
     "title_accessibility": "Accessibility",
     "access_1": "Accessibility is an important topic for us. For that reason we try to make QualWeb as accessible as possible. Conformance wise we aim to meet the ",
